--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
     <link rel="stylesheet" href="/style.css">
-    <title>Guess Name</title>
+    <title>Guess My Number</title>
 </head>
 <body>
 <div class="container">
-
-
     <header class="header optional">
-        <button class="btn again-btn">Again</button>
+        <button class="btn again-btn" onclick="playAgain()">Again</button>
 
         <h1 class="header-title">guess My Number!</h1>
         <div class="divider">?</div>
@@ -34,8 +32,10 @@
             <section class="right-section">
                 <p>Guessed number:</p>
                 <p class="show-test"></p>
+                <div class="lives">❤️❤️❤️❤️❤️</div>
             </section>
         </section>
+        <div class="toast" id="toast"></div>
     </main>
 </div>
 
